
* buffer-write-as-template is a new convenient function to ease saving a document
  in the (personal) templates folder.

* export-cancel: Used to cancel background export processes.


!!!The following LyX functions have been changed in 2.4:

* set-graphics-group was renamed to graphics-set-group.

* info-insert buffer vcs-*: renamed to info-insert vcs *


!!!The following LyX functions have been removed in 2.4:

* date-insert: obsoleted by info-insert date.



!!!The following LyX documents have been moved in 2.4:

* As a result of a major restructuring of the templates and example
  directories, almost all examples and templates files have been renamed and
  moved to subfolders that reflect the layout category.
  The files now have much more decriptive (and longer) names, and they use
  URL encoding for specific special characters such as '(', ')' and '&'.
  Notably also the file that opens for new users has been renamed (from
  splash.lyx to Welcome.lyx).


!!!The following new folders have been added to the LyX directory

* The examples and templates directories have been completely re-organized.
  They are now much more structured (by means of layout categories) and thus
  consist of many new subfolders. 



!!!The following preferences files have been removed from the tarball in 2.4:



!!!The following metadata files have been added to the tarball in 2.4:



!!Changes with respect to external programs and libraries in 2.4:

* The Qt5 libraries are now used by default. In order to link against
  Qt4 the configure option --disable-qt5 has to be used.



!!Known issues in version 2.4.0

* See http://www.lyx.org/trac/wiki/BugTrackerHome


!!Caveats when upgrading from earlier versions to 2.4.x

* Autotools monolithic build option for building LyX binaries was removed,
  for compilation speedup use parallel building on multiple cores instead.

!! If upgrading from a LyX version before 2.3.0
